add devin and teagan

--- a/about.html
+++ b/about.html
@@ -188,38 +188,27 @@
 					<h1>Our Staff</h1>
 				</header>
 				<div class="spotlights">
-					<!-- <section>
-						<div class="image"><img src="images/momzo.png" alt="" /></div>
+					<section>
+						<div class="image"><img src="images/devin.jpg" alt="" /></div>
 						<div class="content">
 							<header class="major">
-								<h3>Lynn Butler</h3>
+								<h3>Devin Winkler</h3>
 							</header>
-							<p class="bio-spotlights">My name is Lynn. I’m the proud owner of Babies & Bellies 3D/4D
-								Ultrasound Studio and
-								Prenatal Wellness Spa. My vision was to always offer a family friendly environment with
-								a caring and dedicated staff who are willing to go above and beyond to ensure your visit
-								is comfortable and unforgettable. We take pride in all our new mommies-to-be, making
-								sure they feel special and cared for during their visit.</br></br>
+							<p class="bio-spotlights">Hello! My name is Devin and I am the owner of Babies and Bellies
+								3D Ultrasound. I purchased the business when I had my first baby and realized I needed
+								to make a career change that would allow me to be with him for all the important moments
+								and milestones. For me, becoming a mother was a completely transformative process that
+								left me in complete awe of mothers and women in general. I am now expecting my second
+								baby boy and continue to be totally in tune with the needs and wants of expectant
+								mothers.</br></br>
 
-								At Babies & Bellies we truly value being able to bring you and your loved ones an
-								experience that will last a lifetime. Seeing your new baby for the first time is such a
-								magical experience. We are honored to have served thousands of families and are excited
-								to share this Miracle of Life with you and your families.</br></br>
-
-								We offer you the most advanced and up to date imaging system with our GE Voluson. All of
-								our ARDMS or ARDMS eligible sonographers have been extensively trained in the art of
-								3D/4D imaging. At Babies & Bellies we are excited to bring you this new ultrasound
-								technology and offer it to you as a wonderful bonding experience that the entire family
-								will enjoy.</br></br>
-
-								We are an established imaging facility that was originally founded in Providence, Rhode
-								Island in 2010, but since moved to Warwick, Rhode Island July of 2018.</br></br>
-
-								We offer a spacious, comfortable place for you to come and experience the miracle of
-								life! We offer many entertainment 2D/ 3D and 4D ultrasound packages to fit every budget
-								and we look forward to welcoming you!</p>
+								I love to offer a service that allows mothers-to-be an experience that connects them to
+								their baby before they are able to meet. For some, our services offer relief from worry.
+								For others, it can be a celebration with friends and family. We hope you have a positive
+								experience from start to finish when working with Babies and Bellies!
+							</p>
 						</div>
-					</section> -->
+					</section>
 					<section>
 						<div class="image"><img src="images/deanna.png" alt="" /></div>
 						<div class="content">
@@ -283,6 +272,19 @@
 
 								She joined Babies and Bellies shortly after graduation in 2019 and loves being able to
 								help families make great memories together.</p>
+						</div>
+					</section>
+
+					<section>
+						<div class="image"><img src="images/teagan.jpg" alt="" /></div>
+						<div class="content">
+							<header class="major">
+								<h3>Teagan Marble</h3>
+							</header>
+							<p class="bio-spotlights">Hi there! My name is Teagan and I work the front desk at Babies
+								and Bellies. I’m currently in school to become a social worker! Some of my hobbies
+								include crafting, reading, and painting. In fact, you’ll likely find me reading a book
+								when you come in. I look forward to meeting you and your baby!</p>
 						</div>
 					</section>
 				</div>
