--- a/packages.html
+++ b/packages.html
@@ -176,13 +176,11 @@
 									</p>
 									<p class="smallSpecial">A great value to watch your baby grow throughout your
 										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Scan)</b></p>
 									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Sweet Pea)</b></p>
 									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Sweet Pea)</b></p>
 									<p class="smallSpecial"><b>4th Visit 33-40 Weeks (Ready to Pop)</b></p>
-									<p class="smallSpecial">Mommy gift bag at session #1
-										</br>Free Heartbeat stuffed
-										animal of your choice at session #2
+									<p class="smallSpecial">Free Heartbeat stuffed animal of your choice at session #1
 										</br>Free Video clips at each session
 										</br>“Link” of digital photo album sent via email or text @ each session
 										</br>Add photo pkg for $40 (10-15 black & white prints and 3 color prints) @
@@ -241,7 +239,7 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Trucks or Tiaras $95 <span class="smaller">(Twin
+									<div class="name"><b>Gender Scan $95 <span class="smaller">(Twin
 												$125)</span></b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>15+</b> Weeks
@@ -289,13 +287,11 @@
 									</p>
 									<p class="smallSpecial">A great value to watch your baby grow throughout your
 										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Scan)</b></p>
 									<p class="smallSpecial"><b>2nd Visit 24-32 weeks (Just the Basics)</b></p>
 									<p class="smallSpecial"><b>3rd Visit 24-32 weeks (Just the Basics)</b></p>
 									<p class="smallSpecial"><b>4th Visit 33-40 weeks (Ready to Pop)</b></p>
-									<p class="smallSpecial">Mommy gift bag at session #1
-										</br>Free Heartbeat stuffed
-										animal of your choice at session #2
+									<p class="smallSpecial">Free Heartbeat stuffed animal of your choice at session #1
 										</br>Free 3D quick peek at all sessions
 										</br>Free Video clips at all sessions
 										</br>“Link” of digital photo album sent via email or text @ each session
