rename gender package

--- a/packages.html
+++ b/packages.html
@@ -176,7 +176,7 @@
 									</p>
 									<p class="smallSpecial">A great value to watch your baby grow throughout your
 										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Scan)</b></p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Determination)</b></p>
 									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Sweet Pea)</b></p>
 									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Sweet Pea)</b></p>
 									<p class="smallSpecial"><b>4th Visit 33-40 Weeks (Ready to Pop)</b></p>
@@ -239,7 +239,7 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Gender Scan $95 <span class="smaller">(Twin
+									<div class="name"><b>Gender Determination $95 <span class="smaller">(Twin
 												$125)</span></b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>15+</b> Weeks
@@ -287,7 +287,7 @@
 									</p>
 									<p class="smallSpecial">A great value to watch your baby grow throughout your
 										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Scan)</b></p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Determination)</b></p>
 									<p class="smallSpecial"><b>2nd Visit 24-32 weeks (Just the Basics)</b></p>
 									<p class="smallSpecial"><b>3rd Visit 24-32 weeks (Just the Basics)</b></p>
 									<p class="smallSpecial"><b>4th Visit 33-40 weeks (Ready to Pop)</b></p>
