--- a/diagnostic.html
+++ b/diagnostic.html
@@ -203,7 +203,7 @@
 				</div>
 				<p style="text-align: center;">If two exams are performed, the second exam is discounted by 50%</p>
 
-				<p style="text-align: center;">We accept most insurances and also offer <b>self-pay options</b></p>
+				<p style="text-align: center;"><b>Self-pay</b> or HSA accepted.</p>
 
 				<p style="text-align: center;">Have Questions? Give us a call!</p>
 
