--- a/packages.html
+++ b/packages.html
@@ -115,7 +115,8 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Sneak-a-Peek $119 <span class="smaller">(Twin $169)</span></b>
+									<div class="name"><b>10 Minute Sneak-A-Peek Package $119 <span class="smaller">(Twin
+												$169)</span></b>
 									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
@@ -133,7 +134,8 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Sweet Pea $159 <span class="smaller">(Twin $209)</span></b>
+									<div class="name"><b>15 Minute Deluxe Package $159 <span class="smaller">(Twin
+												$209)</span></b>
 									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
@@ -149,7 +151,8 @@
 							</div>
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Simply Sweet $199 <span class="smaller">(Twin $249)</span></b>
+									<div class="name"><b>20 Minute Ultimate Package $199 <span class="smaller">(Twin
+												$249)</span></b>
 									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
@@ -177,8 +180,8 @@
 									<p class="smallSpecial">A great value to watch your baby grow throughout your
 										pregnancy journey!</p>
 									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Gender Determination)</b></p>
-									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Sweet Pea)</b></p>
-									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Sweet Pea)</b></p>
+									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Deluxe Package)</b></p>
+									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Deluxe Package)</b></p>
 									<p class="smallSpecial"><b>4th Visit 33-40 Weeks (Ready to Pop)</b></p>
 									<p class="smallSpecial">Free Heartbeat stuffed animal of your choice at session #1
 										</br>Free Video clips at each session
