--- a/index.html
+++ b/index.html
@@ -310,6 +310,9 @@
 								<input type="text" name="name" id="name" value="" placeholder="Name" />
 							</div>
 							<div class="col-6 col-12-xsmall">
+								<input type="text" name="phone" id="phone" value="" placeholder="Phone #" />
+							</div>
+							<div class="col-12">
 								<input type="email" name="email" id="email" value="" placeholder="Email" />
 							</div>
 							<!-- Break -->
