--- a/diagnostic.html
+++ b/diagnostic.html
@@ -122,7 +122,7 @@
 							<!-- Obstetrical -->
 							<tr>
 								<td>Obstetrical</td>
-								<td>1st trimester pregnancy confirmation and dating</td>
+								<td>1st trimester pregnancy confirmation and dating starting at 8 weeks</td>
 								<td>76801</td>
 								<td>$129</td>
 							</tr>
