massage gift card warning

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 					<li><a href="https://www.vagaro.com/us03/babiesandbellies3dultrasoundstudio/gift-certificates"
 							class="button wide scrolly">Purchase Gift Card</a></li>
 				</ul>
+				<p>If you're looking to buy a gift card for massage you must contact Alanna
+					directly, not purchase through our Vagaro</p>
 			</div>
 		</section>
 
