new banner and bio

--- a/about.html
+++ b/about.html
@@ -195,7 +195,8 @@
 								<h3>Devin Winkler</h3>
 							</header>
 							<p class="bio-spotlights">Hello! My name is Devin and I am the owner of Babies and Bellies
-								3D Ultrasound. I purchased the business when I had my first baby and realized I needed
+								3D Ultrasound. I took over Babies and Bellies, originally founded by my Mom, when I had
+								my first baby and realized I needed
 								to make a career change that would allow me to be with him for all the important moments
 								and milestones. For me, becoming a mother was a completely transformative process that
 								left me in complete awe of mothers and women in general. I am now expecting my second
