--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 					<li><a href="tel:4017372229" class="button primary wide scrolly">Call Now</a></li>
 				</ul>
 				<ul class="actions special">
-					<li><a href="https://www.vagaro.com/us03/babiesandbellies3dultrasoundstudio/gift-certificates"
-							class="button wide scrolly">Purchase Gift Card</a></li>
+					<li><a href="https://www.vagaro.com/babiesandbellies3dultrasoundstudio/gift-certificates"
+							class="button wide scrolly">Ultrasound Gift Card</a></li>
+					<li><a href="https://www.vagaro.com/alannafernandes" class="button wide scrolly">Massage Gift
+							Card</a></li>
 				</ul>
-				<p>If you're looking to buy a gift card for massage you must contact Alanna
-					directly, not purchase through our Vagaro</p>
 			</div>
 		</section>
 
