--- a/packages.html
+++ b/packages.html
@@ -331,7 +331,7 @@
 		<section class="wrapper style1 repeating">
 			<div class="inner">
 				<header class="major special">
-					<h1>Perfect Add-ons</h1>
+					<h1>Package Add-ons</h1>
 				</header>
 				<div class="packages">
 					<div class="innerPack">
@@ -339,8 +339,8 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Perfect Add-ons</b></div>
-									<div class="borderPack"></div>
+									<!-- <div class="name"><b>Package Add-ons</b></div>
+									<div class="borderPack"></div> -->
 									<p class="smallSpecial"><b>HD Live</b> High Definition Images captured of your baby
 										- <b>$35</b></p>
 									<p class="smallSpecial"><b>Huggable Plush Heartbeat Stuffed Animal</b> with your
