--- a/packages.html
+++ b/packages.html
@@ -276,7 +276,7 @@
 							</div>
 						</div>
 
-						<div class="rowPack">
+						<!-- <div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
 									<div class="name"><b>Baby Bundle $339 <span class="smaller">(Most Popular!) $495
@@ -301,7 +301,7 @@
 										</br>Add photo pkg for $25 (10-15 black & white prints) @ each session</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<!-- <div class="rowPack">
 							<div class="colPackBig">
