--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 				<!-- <div class="image specials"><img src="images/monday.png" alt="" /></div>
 				<div class="image specials"><img src="images/tuesday.png" alt="" /></div>
 				<div class="image specials"><img src="images/wednesday.png" alt="" /></div> -->
-				<div class="image specials"><img class="spec-img" src="images/specials-all3.png" alt="" /></div>
+				<div class="image specials"><img class="spec-img" src="images/just-2.png" alt="" /></div>
 			</div>
 			<ul class="actions special modal-button">
 				<li><a href="tel:4017372229" class="button primary">Call Now</a></li>
