--- a/packages.html
+++ b/packages.html
@@ -389,11 +389,10 @@
 								<div class="testimonial">
 									<div class="name"><b>Tuesday</b></div>
 									<div class="borderTest"></div>
-									<p><b>Free Photo Package</b> included with any 2D or 3D Ultrasound Package ($10-$25
-										Savings!)</br></br></p>
+									<p><b>Free Video clips</b></br></br></p>
 								</div>
 							</div>
-							<div class="colTest">
+							<!-- <div class="colTest">
 								<div class="testimonial">
 									<div class="name"><b>Wednesday</b></div>
 									<div class="borderTest"></div>
@@ -402,7 +401,7 @@
 									<p class="smallSpecial">We promise to make every effort to obtain the best possible
 										video clips.</p>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
