--- a/packages.html
+++ b/packages.html
@@ -389,7 +389,8 @@
 								<div class="testimonial">
 									<div class="name"><b>Tuesday</b></div>
 									<div class="borderTest"></div>
-									<p><b>Free Video clips</b></br></br></p>
+									<p><b>Free Video clips</b> with any 3D/4D Ultrasound Package. </br>($35.00 Savings)
+									</p>
 								</div>
 							</div>
 							<!-- <div class="colTest">
