updates to massage and employees

--- a/about.html
+++ b/about.html
@@ -288,6 +288,16 @@
 								when you come in. I look forward to meeting you and your baby!</p>
 						</div>
 					</section>
+
+					<section>
+						<div class="image"><img src="images/emily.png" alt="" /></div>
+						<div class="content">
+							<header class="major">
+								<h3>Emily Baker</h3>
+							</header>
+							<p class="bio-spotlights">Emily is an administrator at Babies & Bellies. She holds a Master’s degree in Social Work and worked for close to a decade in supporting families experiencing homelessness. Now, as mom of two young boys, Emily's main focus is being present with her own family. She still brings that caring and supportive energy into a new setting- at Babies & Bellies. She loves getting to know our families and creating a supportive environment for every stage of pregnancy.</p>
+						</div>
+					</section>
 				</div>
 			</div>
 		</section>
