--- a/massage.html
+++ b/massage.html
@@ -109,12 +109,7 @@
 					<p>Here to help assist you in your healing process</p>
 				</header>
 				<!--<div class="image main"><img src="images/pic04.jpg" alt="" /></div>-->
-				<p>Hi, my name is Alanna, and I have been a Licensed Massage Therapist for a decade. I am located in the
-					office of Babies and Bellies 3D/4D Ultrasound Studio and Prenatal Wellness spa.. Appointments are
-					made directly through me which you can text, call, or book yourself online at
-					vagaro.com/alannafernandes ! If there is any day or time you do not see listed on my Vagaro page,
-					please contact me at (401) 472-4252 as there might be something available. Each service price listed
-					is standard for any therapeutic, deep tissue, or prenatal massage.</p>
+				<p>My name is Alanna. I have been a Licensed Massage Therapist for over a decade, in which I've had the privilege of helping people feel more at ease through therapeutic touch. I'm currently offering sessions at Babies and Bellies 3D/4D Ultrasound Studio, where I specialize in therapeutic and prenatal/postnatal massage. I book all appointments directly, giving you the flexibility to schedule in the way that's most convenient for you - whether that's texting, calling, or booking online. If you don't see a day or time that fits your schedule, please reach out. I often have additional availability not shown on the calendar. All service prices listed are standard across every massage style I offer, so you can simply choose the session length that feels right for you. My goal is to create a calm, supportive space where your body can unwind and your mind can reset. I look forward to working with you. *Beginning January 1, 2026, there will be a small adjustment to my service prices. This change allows me to continue providing the high-quality therapeutic care you expect, while keeping up with rising operational costs. I truly appreciate your understanding and continued support. It means the world to me to be part of your wellness routine, and I look forward to seeing you at your next session.</p>
 				<hr class="major" />
 				<div class="packages">
 					<div class="innerPack">
@@ -137,10 +132,10 @@
 								<div class="package manilla green-package">
 									<div class="name"><b>Massage Price List</b></div>
 									<div class="borderPack"></div>
-									<p class="smallSpecial">30 min Therapeutic Starting at $50
-										</br>45 min Therapeutic Starting at $65
-										</br>1 Hour Therapeutic Starting at $85
-										</br>90 min Therapeutic Starting at $115
+									<p class="smallSpecial">30 min Therapeutic Starting at $65
+										</br>45 min Therapeutic Starting at $80
+										</br>1 Hour Therapeutic Starting at $100
+										</br>90 min Therapeutic Starting at $130
 										</br>1 Hour Prenatal Starting at $85
 										</br>90 min Prenatal Starting at $115
 									</p>
